--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -26,6 +26,10 @@
     color: black;
 }
 
+.jobCard {
+    cursor: pointer;
+}
+
 .noDecoration:hover {
     color: rgba(0, 0, 0, 0.25) !important;
 }
