--- a/views/default/index - Copy.html
+++ b/views/default/index - Copy.html
@@ -13,10 +13,12 @@
             <div class="container" style="padding: 0px; background-color: rgba(32, 32, 32);">
                 <div class="header">
                     <div class="playerTwo">
-                        <h2 style="color: white; padding-left: 18px;">Shared Jobs</h2>
+                        <h2 style="color: white; padding-left: 18px;">Your Jobs</h2>
                     </div>
                     <div class="playerOne">
                         
+                        
+                    
                         <div class="input-group" style="padding-left: 18px; padding-right: 28px;">
                             <form id="form_search" name="form_search" method="get" action="" class="form-inline">
                                 
@@ -38,6 +40,12 @@
                         
                     </div>
                 </div>
+            </div>
+        </div>
+    
+        <div class="container">
+            <div style="margin-bottom: 0px; margin-right: 18px; margin-top: 10px; text-align: right;">
+                <a href="{{=URL('default', 'create')}}"><button class="createJobButton"><i class="fa fa-plus" style="margin-right: 10px;"></i>Create new</button></a>
             </div>
         </div>
 
@@ -87,10 +95,8 @@
                 <ul id="pagination" class="pagination-sm"
                     style="position: absolute; right: 0px;"></ul>
                 
-                
-                
                 <script>
-                    $("#jobsLink").addClass('active');
+                    $("#homeLink").addClass('active');
                     
                     if($('#pagination').data("twbs-pagination")){
                         $('#pagination').twbsPagination('destroy');
@@ -103,9 +109,11 @@
                         startPage: {{=request.vars.page or 1}},
                         onPageClick: function (event, next_page) {                            
                             {{if request.vars.search:}}
-                                window.location.replace("{{=URL()}}" + "?page=" + next_page + "&search={{=request.vars.search}}");
+                        
+                                
+                                //window.location.replace("{{=URL()}}" + "?page=" + next_page + "&search={{=request.vars.search}}");
                             {{else:}}
-                                window.location.replace("{{=URL()}}" + "?page=" + next_page);
+                                //window.location.replace("{{=URL()}}" + "?page=" + next_page);
                             {{pass}}
                         }
                     });
