Done with vue.js pagination

--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -64,6 +64,24 @@
     padding: 20px;
 }
 
+a.first::after {
+  content:'...'
+}
+
+a.last::before {
+  content:'...'
+}
+
+.noSelect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
+
 .submitWrapper {
     white-space: nowrap;
 }
