--- a/views/layout.html
+++ b/views/layout.html
@@ -35,7 +35,7 @@
         <a class="nav-link" id="homeLink" href="{{=URL('default', 'index')}}">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="jobsLink" href="{{=URL('default', 'jobs')}}">Shared Jobs</a>
+        <a class="nav-link" id="jobsLink" href="{{=URL('default', 'jobs')}}">Community</a>
       </li>
     </ul>
       <ul class="navbar-nav ml-auto">
