--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -1,18 +1,41 @@
-/* line 1, ../sass/_main.scss */
+
+/*** basic styles ***/
+html {box-sizing:border-box;}
+*, *:after, *:before {border:0; margin:0; padding:0; box-sizing:inherit;}
+html, body {max-width: 100vw; overflow-x: hidden}
+
 .colorful {
   color: #bb8833;
 }
 
 .roundedCorners {
-    border-radius: 4px;
+    border-radius: 2px;
     border: 2px solid #000;
     background: rgba(0, 0, 0, 0.4);
-    margin: 8px;
+    
     width: 100%;
-    height: calc(75px + 4.5em);
     overflow: hidden;
     text-overflow: ellipsis;
+    
+    position: relative;
 }
+
+#topRightTest1 {
+    position: absolute;
+    top: 1px;
+    right: 0px;
+    color: white;
+    padding: 2px;
+}
+
+#topRightTest2 {
+    position: absolute;
+    top: 0px;
+    right: 22px;
+    color: white;
+    padding: 2px;
+}
+
 
 .topButtons {
     margin: 8px;
@@ -58,10 +81,8 @@
 }
 
 .createJobButton {
-    border-radius: 0px;
-    border: 1px solid #000 !important;
-    background-color: white;
-    padding: 20px;
+    background-color: rgba(33, 33, 33, 0.75);
+    color: white;
 }
 
 a.first::after {
@@ -89,7 +110,6 @@ a.last::before {
 .whiteGloss {
     border-radius: 0px;
     width: 100%;
-    height: 75px;
 }
 
 .header {
@@ -97,11 +117,28 @@ a.last::before {
     width: 100%;
     margin-top: 10px;
 }
+
 .playerOne {
     float: right;
 }
 .playerTwo {
     float: left;
+}
+
+.postedBy {
+    background-color: rgba(33, 33, 33, 0.9);
+    width: 100%;
+    text-align: right;
+}
+
+.postedByText {
+    font-size: 14px;
+    padding: 2px 8px 2px 8px;
+    color: white;
+    
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .myTextBottomLeft {
@@ -126,6 +163,9 @@ a.last::before {
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    
+    height: 3.5em;
+    
     overflow: hidden;
     text-overflow: ellipsis;
 }
@@ -167,18 +207,18 @@ a.last::before {
 }
 
 /*** grid ***/
-.container {margin-right:-20px}
-.container>.quarter, .container>.half, .container>.third, .container>.twothirds, .container>.threequarters, .container>.sixty, .container>.fourty {display:inline-block; padding: 0 20px 0 0; vertical-align:top}
-.container>.fill{display: inline-block; padding-right: 20px; margin-right:-10px}
-.container img, .container video {max-width:100%}
+.containerS {margin-right:-20px}
+.containerS>.quarter, .containerS>.half, .containerS>.third, .containerS>.twothirds, .containerS>.threequarters, .containerS>.sixty, .containerS>.fourty {display:inline-block; padding: 0 20px 0 0; vertical-align:top}
+.containerS>.fill{display: inline-block; padding-right: 20px; margin-right:-10px}
+.containerS img, .containerS video {max-width:100%}
 .max900 {margin-left:auto; margin-right:auto}
 
 @media all and (min-width:800px) {
   .max900 {max-width:900px}
   .quarter {width:25%; margin-right:-5px}
   .half {width:50%; margin-right:-10px}
-  .sixty {width: 60%; margin-right:-10px}
-  .fourty {width: 40%; margin-right:-10px}
+  .sixty {width: 90%; margin-right:-10px}
+  .fourty {width: 10%; margin-right:-10px}
   .third {width:33.33%; margin-right:-6.66px}
   .twothirds {width:66.66%; margin-right:-13.33px}
   .threequarters {width:75%; margin-right:-15px}
@@ -186,8 +226,8 @@ a.last::before {
 @media all and (min-width:600px) and (max-width:799px) {
   .quarter.compressible {width:25%; margin-right:-5px}
   .half.compressible {width:50%; margin-right:-10px}
-  .fourty.compressible {width:40%; margin-right:-10px}
-  .sixty.compressible {width:60%; margin-right:-10px}
+  .fourty.compressible {width:10%; margin-right:-10px}
+  .sixty.compressible {width:90%; margin-right:-10px}
   .threequarters.compressible {width:75%; margin-right:-15px}
   .quarter:not(.compressible), .half:not(.compressible), .threequarters:not(.compressible) {width:100%; margin-right:-20px}
   .third {width:33.33%; margin-right:-6.66px}
@@ -201,8 +241,8 @@ a.last::before {
   label.third:not(.compressible).right, label.twothirds:not(.compressible).right   {float:left; text-align:left}
   .quarter.compressible {width:25%; margin-right:-5px}
   .half.compressible {width:50%; margin-right:-10px}
-  .fourty.compressible {width:40%; margin-right:-10px}
-  .sixty.compressible {width:60%; margin-right:-10px}
+  .fourty.compressible {width:10%; margin-right:-10px}
+  .sixty.compressible {width:90%; margin-right:-10px}
   .third.compressible {width:33.33%; margin-right:-6.66px}
   .twothirds.compressible {width:66.66%; margin-right:-13.33px}
   .threequarters.compressible {width:75%; margin-right:-15px}
