--- a/views/default/create.html
+++ b/views/default/create.html
@@ -240,8 +240,14 @@
                 $('#job_max_players').on('input', setCode);
 
                 var availableTags = [
-                    "models/player/Group01/Female_01.mdl",
-                    "models/player/phoenix.mdl"
+                    'models/player/alyx.mdl',
+                    'models/player/police.mdl',
+                    'models/player/combine_super_soldier.mdl',
+                    'models/player/Group01/female_01.mdl',
+                    'models/player/breen.mdl',
+                    'models/player/monk.mdl',
+                    'models/player/kleiner.mdl',
+                    'models/player/phoenix.mdl'
                 ];
                 $("#job_model").autocomplete({
                     source: availableTags,
