--- a/views/default/create.html
+++ b/views/default/create.html
@@ -1,7 +1,5 @@
 {{extend 'layout.html'}}
 
-<script src="https://unpkg.com/vue"></script>
-
 <script src="{{=URL('static','js/jscolor.js')}}"></script>
 <script src="{{=URL('static','js/tagify.js')}}"></script>
 <script src="{{=URL('static','js/jQuery.tagify.js')}}"></script>
@@ -14,129 +12,101 @@
 
 <script>hljs.initHighlightingOnLoad();</script>
 
-<div class="mycontent" style="background-color: #f0f0f0;">
-
-
-    <div class="fill" style="padding: 10px 0px 15px 0px; background-color: rgba(32, 32, 32);">
-        <div class="container" style="padding: 0px; background-color: rgba(32, 32, 32);">
-            <h2 style="color: white;">Create new job</h2>
+<div class="mycontent" style="background-color: #e2e2e2;">
+    
+    
+    <div class="container-fluid" style="background-color: rgba(32, 32, 32);">
+        <div class="container" style="padding-left: 0px !important;">
+            <div class="row" style="padding-top: 15px; padding-bottom: 15px;">
+                <div class="col-md-12">   
+                    <h2 style="color: white;">Create new job</h2>
+                </div>
+            </div>
         </div>
     </div>
-    
-    <div class="container" style="padding: 20px 0px 5px 0px;">
-        <span style="font-size: 12px; font-family: sans-serif; color: rgba(32, 32, 32, 0.5)">JOB INFORMATION</span>
+        
+    <div class="container" style="background-color: #e2e2e2; padding-left: 0px !important;">
+        <div class="row no-gutters" style="padding-top: 15px; padding-bottom: 5px;">
+            <div class="col-md-12">
+                <span style="font-size: 12px; font-family: sans-serif; color: rgba(32, 32, 32, 0.5)">JOB INFORMATION</span>
+            </div>
+        </div>
     </div>
     
     <div class="container" style="background-color: white;">
-        <div class="half compressible" style="padding: 10px 25px 10px 25px;">
-			{{=form.custom.begin}}
+        
+        <div class="row">
+                <div class="col-md-6 col-sm-6" style="margin-top: 10px; margin-bottom: 10px;">
+                    {{=form.custom.begin}}
 
-			<div class="form-group">
-				<label for="job_job_id">ID</label>
-				{{=form.custom.widget.job_id}}
-			</div>
+                    <div class="form-group">
+                        <label for="job_job_id">ID</label>
+                        {{=form.custom.widget.job_id}}
+                    </div>
 
-			<div class="form-group">
-				<label for="job_name">Name</label>
-				{{=form.custom.widget.name}}
-			</div>
+                    <div class="form-group">
+                        <label for="job_name">Name</label>
+                        {{=form.custom.widget.name}}
+                    </div>
 
-			<div class="form-group">
-				<label for="job_description">Description</label>
-				{{=form.custom.widget.description}}
-			</div>
+                    <div class="form-group">
+                        <label for="job_description">Description</label>
+                        {{=form.custom.widget.description}}
+                    </div>
 
-			<div class="form-group">
-				<label for="job_model">Player model</label>
-				<br/>
-				{{=form.custom.widget.model}}
-			</div>
-        </div>
+                    <div class="form-group">
+                        <label for="job_model">Player model</label>
+                        <br/>
+                        {{=form.custom.widget.model}}
+                    </div>
+                </div>
+                
+                <div class="col-md-6 col-sm-6" style="margin-top: 10px; margin-bottom: 10px;">                    
+                    <div class="form-group">
+                        <label for="job_color">Color</label>
+                        <br/>
+                        {{=form.custom.widget.color}}
+                    </div>
 
-        <div class="half compressible" style="padding: 10px 25px 10px 25px; background-color: white;">
+                    <div class="form-group">
+                        <label for="job_salary">Salary</label>
+                        <br/>
+                        {{=form.custom.widget.salary}}
+                    </div>
 
-            <div class="form-group">
-                <label for="job_color">Color</label>
-                <br/>
-                {{=form.custom.widget.color}}
-            </div>
+                    <div class="form-group">
+                        <label for="job_salary">Max players</label>
+                        <br/>
+                        {{=form.custom.widget.max_players}}
+                    </div>
 
-            <div class="form-group">
-                <label for="job_salary">Salary</label>
-                <br/>
-                {{=form.custom.widget.salary}}
-            </div>
+                    <div class="form-group">
+                        <label for="job_weapons">Weapons</label>
+                        <br/>
+                        <input id='weapon_tags' name='tags' placeholder='Add weapon classes' value=''>
+                        {{=form.custom.widget.weapons}}
+                    </div>
 
-            <div class="form-group">
-                <label for="job_salary">Max players</label>
-                <br/>
-                {{=form.custom.widget.max_players}}
-            </div>
-            
-            <div class="form-group">
-                <label for="job_weapons">Weapons</label>
-                <br/>
-                <input id='weapon_tags' name='tags' placeholder='Add weapon classes' value=''>
-                {{=form.custom.widget.weapons}}
-            </div>
-
-            <script>
-                $('#job_job_id').keypress(function(e) {
-                    if(e.which === 32 || !(e.which == 95 || (e.which >= 65 && e.which <= 90) || (e.which >= 48 && e.which <= 57) || (e.which >= 97 && e.which <= 122))) {
-                        return false;
-                    }
-                });
-
-                $('#job_name').keypress(function(e) {
-                    if(!(e.which == 32 || (e.which >= 48 && e.which <= 57) || (e.which == 39) || (e.which >= 65 && e.which <= 90) || (e.which >= 97 && e.which <= 122))) {
-                        return false;
-                    }
-                });
-
-                $('#job_description').keypress(function(e) {
-                    if(!(e.which === 32 || e.which == 33 || e.which == 46 || e.which == 39 || e.which == 44 || (e.which >= 65 && e.which <= 90) || (e.which >= 97 && e.which <= 122))) {
-                        return false;
-                    }
-                });
-
-                var input = document.querySelector('input[name=tags]'),
-                tagify = new Tagify(input, {
-                    whitelist : ["weapon_ak47", "weapon_ar2"]
-                })
-
-                var wepTags = [];
-
-                // listen to custom 'remove' tag event
-                tagify.on('remove', onRemoveTag);
-
-                function onRemoveTag(e){
-                    wepTags.splice(wepTags.indexOf(e.detail.value), 1);
-                    setCode();
-                }
-
-                tagify.on('add', onAddTag);
-
-                function onAddTag(e) {
-                    wepTags.push(e.detail.value);
-                    setCode();
-                }
-            </script>
-
-            <div class="form-check" style="padding-left: 0px;">
-                {{=form.custom.widget.vote}}
-                <label class="form-check-label" for="job_vote">
-                    Vote
-                </label>
-            </div>
-
-            <div class="form-check" style="padding-left: 0px;">
-                {{=form.custom.widget.admin_only}}
-                <label class="form-check-label" for="job_admin_only">
-                    Admin only
-                </label>
-            </div>
+                    
 
 
+                    <div class="form-check" style="padding-left: 0px;">
+                        {{=form.custom.widget.vote}}
+                        <label class="form-check-label" for="job_vote">
+                            Vote
+                        </label>
+                    </div>
+
+                    <div class="form-check" style="padding-left: 0px;">
+                        {{=form.custom.widget.admin_only}}
+                        <label class="form-check-label" for="job_admin_only">
+                            Admin only
+                        </label>
+                    </div>
+                    
+                    
+                    
+                </div>
         </div>
     </div>
 
@@ -150,12 +120,6 @@
         </div>
     </div>
 
-    <script>
-        $('form').submit(function() {
-             $("#job_weapons").val(JSON.stringify(wepTags));
-        });
-    </script>
-
     <div class="container" style="margin-top: 15px;">
         <div class="full" style="padding-left: 15%; padding-right: 15%;">
             
@@ -166,103 +130,10 @@
             <pre style="border: solid; border-width: 1px 1px 1px 1px; padding-top: 0px; padding-right: 25px; background-color: white; position: relative;">
             <button id="copyButton" onclick="myFunction()" type="button" style="position: absolute; top: -1px; right: 0px; background-color: steelblue; color: white; border-radius: 2px !important;">Copy</button><code class="lua" style="background-color: white; padding: 20px;"><div id='genCode'></div></code></pre>
             
-            <script>
-                copied = false;
-                
-                $("#copyButton").click(function() {
-                    if (!copied) {
-                        copied = true;
-                        $("#copyButton").text("Copied!");
-                        setTimeout(function() {
-                            $("#copyButton").text("Copy");
-                            copied = false;
-                        }, 1000);
-                    }
-                });
-
-                function myFunction() {
-                    var $temp = $("<textarea>");
-                    $("body").append($temp);
-                    $temp.val($("#genCode").text()).select();
-                    document.execCommand("copy");
-                    $temp.remove();
-                }
-
-                function hexToRgb(hex) {
-                    var bigint = parseInt(hex, 16);
-                    var r = (bigint >> 16) & 255;
-                    var g = (bigint >> 8) & 255;
-                    var b = bigint & 255;
-
-                    return "<span class='hljs-number'>" + r + "</span>, <span class='hljs-number'>" + g + "</span>, <span class='hljs-number'>" + b + "</span>";
-                }
-
-                function getWeaponsList() {
-                    var str = "";
-                    var lastIndex = wepTags.length - 1;
-                    wepTags.forEach(function(wep, index) {
-                        // This is more readable (than using a ternary operator).
-                        if (index != lastIndex) {
-                            str += '"<span class="hljs-string">' + wep + '</span>",';
-                        } else {
-                            str += '"<span class="hljs-string">' + wep + '</span>"';
-                        }
-                    });
-                    return str;
-                }
-
-                function setCode() {
-                    $('#genCode').html( "TEAM_" + $('#job_job_id').val() + ` = DarkRP.createJob(<span class="hljs-string">"` + $('#job_name').val() +`"</span>, {
-    color = Color(` + hexToRgb($('#job_color').val()) + `),
-    model = <span class="hljs-string">"` + $('#job_model').val() + `"</span>,
-    description = <span class="hljs-string">"` + $('#job_description').val() + `"</span>,
-    weapons = {` + getWeaponsList() + `},
-    command = <span class="hljs-string">"` + $('#job_job_id').val().toLowerCase() + `"</span>,
-    <span class="hljs-built_in">max</span> = ` + $('#job_max_players').val() + `,
-    salary = ` + $('#job_salary').val() + `,
-    vote = <span class='hljs-literal'>` + ($('#job_vote').is(':checked') ? 'true' : 'false') + `</span>,
-    admin = <span class='hljs-literal'>` + ($('#job_admin_only').is(':checked') ? 'true' : 'false') + `</span>,
-})`);
-                }
-
-                $('#job_job_id').on('input', setCode);
-                $('#job_name').on('input', setCode);
-                $('#job_salary').on('input', setCode);
-                $('#job_description').on('input', setCode);
-                $('#job_model').on('input', setCode);
-                $('#job_model').keypress(function (e) {
-                    if (e.which == 13) {
-                        setCode();
-                        return false;
-                    }
-                });
-
-                $('#job_max_players').on('input', setCode);
-
-                var availableTags = [
-                    'models/player/alyx.mdl',
-                    'models/player/police.mdl',
-                    'models/player/combine_super_soldier.mdl',
-                    'models/player/Group01/female_01.mdl',
-                    'models/player/breen.mdl',
-                    'models/player/monk.mdl',
-                    'models/player/kleiner.mdl',
-                    'models/player/phoenix.mdl'
-                ];
-                $("#job_model").autocomplete({
-                    source: availableTags,
-                    select: function() {
-                        setTimeout(function() {
-                            setCode();
-                        }, 0);
-                    }
-                });
-
-                $("#job_vote").on('change', setCode);
-                $("#job_admin_only").on('change', setCode);
-
-                setCode();
-            </script>
-        </div>
-    </div>
+     </div>
 </div>
+
+</div>
+
+<script src="{{=URL('static','js/form_control.js')}}"></script>
+<script src="{{=URL('static','js/create.js')}}"></script>
